--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,6 +4,8 @@ docker_packages:
   - docker-ce-cli
   - containerd.io
 
+docker_daemon_config: {}
+
 docker_service_name: docker
 docker_service_enabled: true
 docker_service_state: started
