--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,7 +4,12 @@ docker_packages:
   - docker-ce-cli
   - containerd.io
 
-docker_daemon_config: {}
+docker_daemon_config:
+  exec-opts: ['native.cgroupdriver=systemd']
+  log-driver: 'json-file'
+  log-opts:
+    max-size: '100m'
+  storage-driver: 'overlay2'
 
 docker_service_name: docker
 docker_service_enabled: true
